fix: add exports required LWJGL 3.4.0-snapshot+15